# AI-Copilot

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md
.changes/: READY  rename.patch.gz.b64.part00  rename.patch.gz.b64.part01  rename.patch.gz.b64.part02  rename.patch.gz.b64.part03  rename.patch.gz.b64.part04
.github/workflows/: apply-rename.yml  build.yml
arma3/@AI_Copilot/: mod.cpp
arma3/@Arma_AI_Bridge/: mod.cpp
docs/: architecture.md  repository-audit.md  telemetry-schema.md  test-plan.md
docs/papa-bear-v1/: README.md  ace-advanced-ballistics-integration.md  ace3-integration.md  action-gateway.md  arma-data-contract.md  (+20 more)
native/ArmaAiBridge/: ArmaAiBridge.cpp  CMakeLists.txt
native/ArmaBridge/: ArmaBridge.cpp  CMakeLists.txt
samples/: query-command-v1.json  query-result-v1.json  telemetry-v1.json
schemas/: ballistic-profiles-v1.schema.json  command-v1.schema.json  context-seed-state-v1.schema.json  friendly-force-delta-v1.schema.json  friendly-force-snapshot-v1.schema.json  map-gazetteer-v1.schema.json  map-index-command-v1.schema.json  map-index-progress-v1.schema.json  map-manifest-v1.schema.json  map-tile-v1.schema.json  mission-capabilities-v1.schema.json  normalized-event-v1.schema.json  normalized-event-v2.schema.json  operational-observation-batch-v1.schema.json  query-result-v1.schema.json  session-handshake-v1.schema.json  state-snapshot-v2.schema.json  tactical-snapshot-v2.schema.json  telemetry-v1.schema.json
scripts/: build.ps1  create-github-repo.ps1  package-mod.ps1  package_pbo.py  send-test-telemetry.ps1  verify_repository.py
(+192 files in other folders)
